tests/snapshots/run_wpt_conformance__litert_softplus_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softplus.https.any.js softplus float16 1D constant tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([160, 69, 43, 69, 4, 68, 189, 72, 255, 72, 17, 71, 68, 64, 24, 72, 44, 69, 54, 64, 12, 67, 35, 68, 248, 62, 37, 69, 4, 69, 224, 41, 234, 65, 235, 67, 133, 69, 49, 71, 98, 72, 126, 61, 119, 72, 85, 72]);
  }

  nodes {
    [softplusOutput] = softplus(operand_0, label="");
  }

  outputs { softplusOutput; }
}
