tests/snapshots/run_wpt_conformance__litert_softplus_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softplus.https.any.js softplus float16 5D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    softplusInput: f16[1, 2, 1, 3, 4];
  }

  nodes {
    [softplusOutput] = softplus(softplusInput, label="");
  }

  outputs { softplusOutput; }
}
